# agentic-ai-public

./: .gitignore  ARCHITECTURE.md  COMMIT_MESSAGE.txt  LEARNING_GUIDE.md  MANIFEST.in  QUICKSTART.md  README.md  backup_project.py  environment.yml  pyproject.toml  requirements.txt  setup.py.bak  store_db.json
chart_agent/: README.md  __init__.py
chart_agent/docs/: ARCHITECTURE.md  LLM_INSIGHT_STRATEGY.md
chart_agent/docs/frontend/: CURL.md  REACT.md  README.md  STREAMLIT.md  SWAGGER_UI.md
chart_agent/examples/: README.md  __init__.py  analyze_splice_sites.py  utils_demo.py
chart_agent/server/: QUICKSTART.md  README.md  config.py
chartgen/: M2_UGL_1.ipynb
dev/: GITHUB_SETUP_REVIEW.md  LIBRARIES_DOCUMENTATION.md  MAMBA_SETUP_SUMMARY.md  REFLECTION_DOCS_SUMMARY.md  SCRIPT_REORGANIZATION.md  SETUP_STATUS.md  Script Reorganization Complete.md
dev/reflection/: dev1-multimodal-inputs.md
docs/: DOCUMENTATION_GUIDES_EXAMPLE.md  DOCUMENTATION_ORGANIZATION.md  DOCUMENTATION_STRUCTURE.md  ENVIRONMENT_SETUP.md  MAMBA_VS_PIP.md  README.md  STRUCTURE.md
docs/architecture/: AGENTIC_ROADMAP.md
docs/data_management/: guidelines.md
docs/development/: AGENTS.md
docs/installation/: EDITABLE_INSTALL.md  ENVIRONMENT_SETUP.md  GITHUB_SETUP.md  INSTALL_QUICKSTART.md  SETUP_CHECKLIST.md  SETUP_README.md
docs/libraries/: AGENT_LLM_TOOLS.md  DATA_SCIENCE.md  DEPENDENCIES.md  JUPYTER.md  README.md  WEB_FRAMEWORK.md
docs/patterns/: AGENTIC_PATTERNS.md  ENHANCED_REFLECTION_PROMPT.md  RESEARCH_AGENT_GUIDE.md
docs/tutorials/: USAGE_GUIDE.md
docs/workflows/: DRIVER_SCRIPT_GUIDE.md  OUTPUT_STRATEGY.md
essays/: FORMATTING_IMPROVEMENTS.md  WORD_COUNT_PHILOSOPHY.md
essays/agi_systems/: agi_technical_ingredients_feedback.md  agi_technical_ingredients_new_feedback.md  agi_technical_ingredients_new_final.md  agi_technical_ingredients_new_v1.md  agi_technical_ingredients_new_v1.txt  agi_technical_ingredients_new_v2.md  agi_technical_ingredients_new_v2.txt  agi_technical_ingredients_v1.txt  agi_technical_ingredients_v2.txt
eval/: BIOLOGY_DOMAINS_GUIDE.md  INTEGRATION_GUIDE.md  README.md  RESEARCH_TOOLS_GUIDE.md  __init__.py  config.py  domain_evaluator.py  integration.py  metrics.py  research_tools.py  visualize.py
eval/M4/: M4_UGL_1.ipynb  research_tools.py
eval/docs/: AISUITE_VS_RAW_API.md  QUICK_REFERENCE.md  README.md  TOOL_CALLING_ARCHITECTURE.md  VISUAL_GUIDE.md
eval/examples/: integration_example.py  quick_demo.py
eval/research_agent/: INTEGRATION_SUMMARY.md  README.md  __init__.py  agent.py  workflow.py
eval/research_agent/examples/: basic_usage.py  complete_workflow.py  quality_comparison.py
multiagent/M5/: GL-M5.ipynb
multiagent/M5_lab1/: M5_UGL_1.ipynb  M5_UGL_1_R.ipynb  store_db.json  tools.py  utils.py
multiagent/M5_lab2/: M5_UGL_2.ipynb  campaign_summary_2025-11-20_18-08-44.md  campaign_summary_2025-11-20_18-10-51.md
multiagent/customer_service/: README.md  __init__.py  cli_single.py  cli_tool_agent.py  data_access.py  execution.py  planning.py  prompt_config.py  relational_data.py  single_agent.py  tinydb_data.py  tool_agent.py  tool_execution.py  tool_planning.py  tool_registry.py
multiagent/customer_service/docs/: README.md  REFACTORING_SUMMARY.md  TOOL_AGENT_USAGE.md  TOOL_REGISTRY_SUMMARY.md  TOOL_REGISTRY_USAGE.md
multiagent/customer_service/tests/: __init__.py  test_tool_registry.py
multiagent/market_research/: README.md  __init__.py  agents.py  example.py  llm_client.py  pipeline.py  run_campaign.py  tools.py
multiagent/research_agent/: README.md  agents.py  manifest.py  pdf_utils.py  pipeline.py  run.py
multiagent/research_agent/server/: config.py  research_service.py  schemas.py
output/research_reports/all_atom_biomolecular_design/: manifest.json  (+2 more)
reflection/: C1M2_Assignment.ipynb  __init__.py
reflection/M2_UGL_1/: M2_UGL_1.ipynb  utils.py
reflection/chart_workflow/: __init__.py  data.py  execution.py  llm.py  prompting.py  workflow.py
reflection/docs/: .gitkeep  README.md
reflection/research_agent/: README.md  __init__.py  config.py  formatting.py  llm.py  prompts.py  requirements-pdf.txt  workflow.py
reflection/sql_agent/: ADAPTIVE_ITERATION_ANALYSIS.md  adaptive_sql_workflow.py  products.db  sql.ipynb
scripts/: QUICKSTART.md  README.md  demo_formatting.py  run_chart_workflow.py  run_enhanced_chart_workflow.py  run_reflection_research_agent.py  start_research_server.sh  stop_research_server.sh  sync_work.py.backup  test_formatting.py
scripts/agents/: README.md  start_email_agent.sh  start_email_llm_service.sh  start_email_server.sh
scripts/install/: setup.sh
splice_agent/: MIGRATION.md  QUICKSTART.md  README.md  __init__.py  splice_analysis.py  utils.py  verify_setup.py
splice_agent/examples/: quick_start.py
splice_agent/server/: SERVICE_MANAGEMENT.md  config.py  splice_service.py
src/nexus/: README.md
tests/: README.md
tests/chart_workflow/: README.md
tests/nexus/: README.md  test_research_tools.py
tests/sql_agent/: test_adaptive_vs_fixed.py  test_role_importance.py
tool_use/: M3_README.md  README.md  RESEARCH_AGENT_ENHANCEMENT.md  __init__.py  client.py  reminders.txt  tools.py  weather_note.txt
tool_use/C1M3/: C1M3_Assignment.ipynb
tool_use/M3_UGL1/: M3_UGL_1.ipynb
tool_use/M3_UGL2/: M3_UGL_2.ipynb
tool_use/docs/: README.md  data_patterns.md  fastapi_tool_use_tutorial.md
tool_use/email_agent/: CONFIGURATION.md  INTEGRATION.md  QUICKSTART.md  README.md  SETUP_COMPLETE.md  __init__.py  check_config.py  config.py  email_tools.py  env.template  requirements.txt  start_server.sh  utils.py
tool_use/examples/: basic_tool_usage.py  manual_tool_execution.py  multi_tool_workflow.py  tool_registry_example.py
tool_use/ml_agent/: QUICKSTART.md  README.md  __init__.py  config.py  ml_tools.py  requirements.txt
tool_use/research_agent/: C1M3_Assignment.ipynb  PDF_SETUP.md  README.md  clean_html_outputs.py  enhanced_driver_code.py  inspect_utils.py  notebook_helpers.py  parallel_tools.py  pdf_generator.py  research_agent.py  research_tools.py  run_research_workflow.py  unittests.py
(+74 files in other folders)
